[gd_scene load_steps=21 format=3 uid="uid://c81kvk2hvopbe"]

[ext_resource type="Script" uid="uid://7eurtcxo075w" path="res://scenes/level_base/level_base.gd" id="1_ncu3c"]
[ext_resource type="PackedScene" uid="uid://iocv5fo1fth5" path="res://scenes/player/player.tscn" id="2_kr674"]
[ext_resource type="Texture2D" uid="uid://bvwta8y6735xf" path="res://assets/sprites/green_tile_set.png" id="2_ncu3c"]
[ext_resource type="Texture2D" uid="uid://coti70vxrwpc3" path="res://assets/sprites/purple_tile_set.png" id="2_txia2"]
[ext_resource type="Shader" uid="uid://1pimjkuyeig7" path="res://scenes/level_base/tall_grass.gdshader" id="5_tn631"]
[ext_resource type="Texture2D" uid="uid://cqm1n7i1a6s1t" path="res://assets/sprites/tall_grass_1.png" id="6_tn631"]
[ext_resource type="Texture2D" uid="uid://c1fvsmjat7xlu" path="res://assets/sprites/tall_grass_purple_1.png" id="7_p2h7h"]
[ext_resource type="PackedScene" uid="uid://h2i67x0c4716" path="res://scenes/score/score.tscn" id="8_48c0a"]
[ext_resource type="PackedScene" uid="uid://bcrrspqjibwxb" path="res://scenes/apple/apple.tscn" id="9_cr6la"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kr674"]
texture = ExtResource("2_ncu3c")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_janvk"]
texture = ExtResource("2_txia2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0

[sub_resource type="TileSet" id="TileSet_8cj0n"]
sources/1 = SubResource("TileSetAtlasSource_janvk")
sources/0 = SubResource("TileSetAtlasSource_kr674")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ncu3c"]
texture = ExtResource("2_ncu3c")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xqidk"]
texture = ExtResource("2_txia2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0

[sub_resource type="TileSet" id="TileSet_7e5lm"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 2
sources/1 = SubResource("TileSetAtlasSource_xqidk")
sources/0 = SubResource("TileSetAtlasSource_ncu3c")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tn631"]
shader = ExtResource("5_tn631")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tn631"]
texture = ExtResource("6_tn631")
texture_region_size = Vector2i(20, 16)
0:0/0 = 0
0:0/0/material = SubResource("ShaderMaterial_tn631")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_48c0a"]
shader = ExtResource("5_tn631")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_48c0a"]
texture = ExtResource("7_p2h7h")
texture_region_size = Vector2i(20, 16)
0:0/0 = 0
0:0/0/material = SubResource("ShaderMaterial_48c0a")

[sub_resource type="TileSet" id="TileSet_p2h7h"]
sources/1 = SubResource("TileSetAtlasSource_tn631")
sources/2 = SubResource("TileSetAtlasSource_48c0a")

[node name="Level" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_ncu3c")

[node name="Player1" parent="." instance=ExtResource("2_kr674")]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(152, 152)
length = 5

[node name="Player2" parent="." instance=ExtResource("2_kr674")]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(168, 152)
length = 5
player_number = 2

[node name="Player3" parent="." instance=ExtResource("2_kr674")]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(184, 152)
length = 5
player_number = 3

[node name="Player4" parent="." instance=ExtResource("2_kr674")]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(200, 152)
length = 5
player_number = 4

[node name="Background" type="TileMapLayer" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_8cj0n")
collision_enabled = false

[node name="Floor" type="TileMapLayer" parent="."]
unique_name_in_owner = true
texture_filter = 1
tile_set = SubResource("TileSet_8cj0n")
collision_enabled = false

[node name="Wall" type="TileMapLayer" parent="." groups=["wall"]]
texture_filter = 1
tile_set = SubResource("TileSet_7e5lm")

[node name="Grass" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_p2h7h")

[node name="Score1" parent="." node_paths=PackedStringArray("player") groups=["score"] instance=ExtResource("8_48c0a")]
player = NodePath("../Player1")

[node name="Score2" parent="." node_paths=PackedStringArray("player") groups=["score"] instance=ExtResource("8_48c0a")]
player = NodePath("../Player2")

[node name="Score3" parent="." node_paths=PackedStringArray("player") groups=["score"] instance=ExtResource("8_48c0a")]
player = NodePath("../Player3")

[node name="Score4" parent="." node_paths=PackedStringArray("player") groups=["score"] instance=ExtResource("8_48c0a")]
player = NodePath("../Player4")

[node name="FirstApple" parent="." instance=ExtResource("9_cr6la")]

[connection signal="apple_eaten" from="Player1" to="." method="_on_player_apple_eaten"]
[connection signal="snake_death" from="Player1" to="." method="_on_player_snake_death"]
[connection signal="apple_eaten" from="Player2" to="." method="_on_player_apple_eaten"]
[connection signal="snake_death" from="Player2" to="." method="_on_player_snake_death"]
[connection signal="apple_eaten" from="Player3" to="." method="_on_player_apple_eaten"]
[connection signal="snake_death" from="Player3" to="." method="_on_player_snake_death"]
[connection signal="apple_eaten" from="Player4" to="." method="_on_player_apple_eaten"]
[connection signal="snake_death" from="Player4" to="." method="_on_player_snake_death"]
